src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Claim_ID__c</fullName>
        <label>Claim ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Source__c</fullName>
        <label>Claim Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Proof of Claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_to_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Asset?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debtor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Debtor Account for Lead</description>
        <inlineHelpText>Debtor Account for Lead</inlineHelpText>
        <label>Debtor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promissory Note</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Trade Claim</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Claimed_Amount__c</fullName>
        <label>Total Claimed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>